@@ -86,8 +86,12 @@ fai (3.2.18) UNRELEASED; urgency=low
   * man/setup-storage.8: Documented these new options
   * Moved parsing of createopts,tuneopts to Parser.pm for simpler code and
     better syntax checking (closes: #521172)
+  * setup-storage/Sizes.pm: Change die to warn in case a preserved partition
+    is not aligned to cylinder boundaries
+  * setup-storage/Parser.pm: Only test for mkfs.X if such a filesystem is to
+    be created (i.e., it will not be preserved)
 
- -- Thomas Lange <lange@debian.org>  Wed, 15 Apr 2009 10:55:11 +0200
+ -- Thomas Lange <lange@debian.org>  Wed, 15 Apr 2009 23:13:31 +0200
 
 fai (3.2.17) unstable; urgency=medium
 
